fix: menu overflow on small screen fixed

--- a/src/components/menu/Menu.scss
+++ b/src/components/menu/Menu.scss
@@ -78,16 +78,27 @@
   }
 
   .menuInner {
-    padding: 21px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 21px 0 10vh;
 
     @media (min-width: $media-md) {
       width: 100%;
       max-width: 60%;
-      padding: 35px 0;
+      padding: 35px 0 10vh;
     }
 
     @media (min-width: $media-lg) {
-      padding: 35px 0 44px;
+      padding: 35px 0 10vh;
+    }
+
+    @media (min-width: $media-xl) {
+      padding: 35px 0 12.5vh;
+    }
+
+    @media (min-width: $media-xxl) {
+      padding: 35px 0 15vh;
     }
   }
 
@@ -205,15 +216,6 @@
 
   .menuListWrapper {
     position: relative;
-    margin: 182px 0 150px;
-
-    @media (min-width: $media-md) {
-      margin: 186px 0 120px;
-    }
-
-    @media (min-width: $media-lg) {
-      margin: 226px 0 112px;
-    }
 
     .menuList {
       position: relative;
